prepare for deployment

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reactpractice",
   "version": "0.1.0",
   "private": true,
+  "homepage": " https://alexbaranov43.github.io/Clicky-Game/",
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
